# gridvid

./: .gitignore  Cargo.toml  Changelog.md  LICENSE  README.md  build.rs
examples/: game_of_life.rs
ffi/: wrapper.c  wrapper.h
src/: encoder.rs  error.rs  lib.rs
src/encoder/: image.rs  minimp4.rs  muxer.rs
src/encoder/muxer/: minimp4.rs
tests/: validation_checks.rs
tests/common/: mod.rs
