[package]
name = "gridvid"
version = "0.1.1"
authors = ["U-03BB"]
readme = "README.md"
repository = "https://github.com/u-03bb/gridvid"
homepage = "https://github.com/u-03bb/gridvid"
description = "Wrapper library for rendering MP4 videos from 2D vectors"
documentation = "https://docs.rs/gridvid"
license = "AGPL-3.0"
categories = ["multimedia::video", "multimedia::encoding"]
keywords = ["mp4", "video", "media", "h264"]
edition = "2021"

[dependencies]
libc = "0.2"
log = "0.4"
openh264 = { version = "0.3", features = ["encoder"]}
thiserror = "1.0"

[dev-dependencies]
env_logger = "0.10"

[build-dependencies]
bindgen = "0.64"
cc = "1.0"
